🔧 update index and style for design revision

--- a/public/index.html
+++ b/public/index.html
@@ -10,20 +10,17 @@
     />
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="Expires" content="0" />
-    <meta
-      name="description"
-      content="한방재활의학과 전문의가 직접 비만과 미용을 아우르는 맞춤 치료를 진행합니다."
-    />
-    <meta name="keywords" content="다이어트 전문 한의원, 피부 전문 한의원" />
+    <meta name="description" content="척추관절 통증 치료 중점 한의원" />
+    <meta name="keywords" content="통증 치료 전문 한의원" />
     <meta name="author" content="미쁜나래" />
     <meta name="viewport" content="width=device-width , initial-scale=1.0" />
 
     <!-- 오픈그래프 설정 -->
-    <meta property="og:title" content="라인앤코한의원" />
-    <meta property="og:description" content="비만 전문 한방재활의학과 전문의" />
+    <meta property="og:title" content="본바로한의원" />
+    <meta property="og:description" content="척추관절 통증 중점진료" />
 
-    <meta property="og:image" content="img/open.jpg" />
-    <meta property="og:url" content="http://lineco.kr" />
+    <!-- <meta property="og:image" content="img/open.jpg" />
+    <meta property="og:url" content="http://lineco.kr" /> -->
     <meta property="og:type" content="website" />
     <title>라인앤코한의원</title>
 
@@ -186,7 +183,7 @@
               <li>現)본바로한의원 대표원장</li>
               <li>前)서청솔요양병원 한방과장</li>
               <li>서울 대명한의원 부원장</li>
-              <li>연길의과대학 침됴교육과정 수료</li>
+              <li>연길의과대학 도교육과정 수료</li>
               <li>국제 근골격계 초음파 자격(RMSK)</li>
             </ul>
             <ul>
