🔧 update index and style for design revision

--- a/public/index.html
+++ b/public/index.html
@@ -152,7 +152,7 @@
       </div>
     </section> -->
 
-    <section class="introduce" id="introduce">
+    <section class="introduce" id="a">
       <div class="wrap">
         <div class="top_box" data-aos="fade-up">
           <div class="title l">
@@ -264,7 +264,7 @@
       <img src="img/problemsvg.svg" alt="" data-aos="fade-up" />
     </section>
 
-    <section class="differentiation">
+    <section class="differentiation" id="b">
       <div class="wrap">
         <div class="title">
           <h5>Differentiation</h5>
@@ -526,7 +526,7 @@
       </div>
     </section>
 
-    <section class="solution" data-aos="fade-up">
+    <section class="solution" data-aos="fade-up" id="c">
       <div class="wrap">
         <div class="title">
           <h5>Solutions</h5>
@@ -644,7 +644,7 @@
       </div>
     </section>
 
-    <section class="review" id="review" data-aos="fade-up">
+    <section class="review" id="review" data-aos="fade-up" id="d">
       <div class="wrap">
         <div class="top_box">
           <div class="title l">
@@ -962,7 +962,7 @@
       <div class="swiper-pagination"></div>
     </section>
 
-    <section class="map" data-aos="fade-up">
+    <section class="map" data-aos="fade-up" id="e">
       <div class="wrap">
         <div class="title l">
           <h5>Visit Us</h5>
