💡 최신 코드 업데이트

--- a/public/index.html
+++ b/public/index.html
@@ -261,7 +261,10 @@
         </div>
       </div>
 
-      <img src="img/problemsvg.svg" alt="" data-aos="fade-up" />
+      <picture>
+        <source srcset="img/problemmo.svg" media="(max-width: 768px)" />
+        <img src="img/problemsvg.svg" alt="" data-aos="fade-up" />
+      </picture>
     </section>
 
     <section class="differentiation" id="b">
@@ -346,9 +349,9 @@
               <h3>PDRN 약침</h3>
               <p>
                 PDRN 약침은 인체의 DNA와 90% 이상 유사한 구조로 세포 증식을
-                활성화하여<br />
+                활성화하여<br class="pc" />
                 손상된 조직을 복구하는 효과가 뛰어납니다. 초음파를 활용하여
-                신경을 압박하는<br />
+                신경을 압박하는<br class="pc" />
                 염증을 박리하고 손상된 조직을 재생합니다.
               </p>
             </div>
@@ -368,9 +371,9 @@
               <h3>자하거 약침</h3>
               <p>
                 자하거 약침은 사람의 태반에서 유래한 생리활성물질을 정제한
-                치료제로<br />
+                치료제로<br class="pc" />
                 미세 손상 회복 및 조직 강화 효능이 뛰어나 시술 후 회복 속도를
-                높이고<br />
+                높이고<br class="pc" />
                 통증이 재발하는 것을 예방하는데 큰 도움이 됩니다.
               </p>
             </div>
@@ -391,9 +394,9 @@
               <h3>황련해독탕 약침</h3>
               <p>
                 한의학의 대표적인 처방인 ‘황련해독탕'을 추출한 뒤 정제하여 만든
-                약침을<br />
+                약침을<br class="pc" />
                 의미합니다. 황련, 황금, 황백, 치자 등의 매우 강력한 소염 성분을
-                함유하고<br />
+                함유하고<br class="pc" />
                 있기 때문에 염증 반응을 빠르게 해소할 수 있습니다.
               </p>
             </div>
@@ -414,10 +417,12 @@
               <h3>침도요법</h3>
               <p>
                 침도(도침)란 끝이 뾰족한 일반 침과는 달리 침 끝에 미세한
-                칼날이<br />
+                칼날이<br class="pc" />
                 결합된 침으로 신경주변의 유착을 치료하는데 특화된
-                치료법입니다.<br />
-                퇴행의 정도가 심하여 구조적인 변화가 발생한 경우에도 치료의<br />
+                치료법입니다.<br class="pc" />
+                퇴행의 정도가 심하여 구조적인 변화가 발생한 경우에도 치료의<br
+                  class="pc"
+                />
                 호전율이 높은 편입니다.
               </p>
             </div>
@@ -438,9 +443,9 @@
               <h3>추나요법</h3>
               <p>
                 비정상적으로 틀어진 뼈와 근육을 정상적으로 정복(整復)하여
-                통증을<br />
+                통증을<br class="pc" />
                 완화하고 척추와 주변 조직의 기능을 원활하게 하는
-                치료법입니다.<br />
+                치료법입니다.<br class="pc" />
                 신경계의 기능을 향상시켜 몸의 자연 치유과정을 돕습니다.
               </p>
             </div>
@@ -460,8 +465,12 @@
             <div class="topbox">
               <h3>척근보탕</h3>
               <p>
-                척근보탕은 척추관절의 구성 성분과 유사한 교제로 이루어져<br />
-                있어 연골, 인대, 근육 등 척추관절의 구성 성분을 손상시키는<br />
+                척근보탕은 척추관절의 구성 성분과 유사한 교제로 이루어져<br
+                  class="pc"
+                />
+                있어 연골, 인대, 근육 등 척추관절의 구성 성분을 손상시키는<br
+                  class="pc"
+                />
                 단백분해효소(MMPs)를 억제하는 효능이 있습니다.
               </p>
             </div>
@@ -503,7 +512,6 @@
           </div>
         </div>
         <div class="rightbox">
-          <span class="ani">초음파 확인 후 65% 상승</span>
           <div class="stick">
             <div class="maskbox">
               <div class="stickbox">
@@ -511,16 +519,23 @@
                 <h4>32%</h4>
               </div>
             </div>
-            <p class="p14">초음파를 보지 않으며 주사할 경우</p>
+            <p class="p14">
+              초음파를 보지 않으며<br class="mo" />
+              주사할 경우
+            </p>
           </div>
           <div class="stick2">
+            <span class="ani">초음파 확인 후 65% 상승</span>
             <div class="maskbox">
               <div class="stickbox">
                 <img src="img/graphbox2.svg" alt="" />
                 <h4>97%</h4>
               </div>
             </div>
-            <p class="p14">초음파를 확인하면서 <span>주사</span>할 경우</p>
+            <p class="p14">
+              초음파를 확인하면서<br class="mo" />
+              <span>주사</span>할 경우
+            </p>
           </div>
         </div>
       </div>
@@ -560,7 +575,7 @@
                 <div class="textbox">
                   <h5>초음파 진단</h5>
                   <p>
-                    초음파 검사를 통해 신경 내부의 부종 유무와<br />
+                    초음파 검사를 통해 신경 내부의 부종 유무와<br class="pc" />
                     Nerve Sprouting(신경가지 생성) 여부를 정밀하게 확인합니다.
                   </p>
                 </div>
@@ -568,7 +583,7 @@
                   <h5>옴니핏 검사</h5>
                   <p>
                     옴니핏 두뇌 스트레스 검사를 통해 교감·부교감 신경의
-                    불균형과<br />
+                    불균형과<br class="pc" />
                     통증에 영향을 미치는 자율신경계 기능 저하를 평가합니다.
                   </p>
                 </div>
@@ -576,7 +591,7 @@
                   <h5>체형분석 검사</h5>
                   <p>
                     체형 분석 검사를 통해 골반, 척추, 관절의 정렬 상태를
-                    확인하고<br />
+                    확인하고<br class="pc" />
                     신체 불균형이 통증에 미치는 구조적 원인을 파악합니다.
                   </p>
                 </div>
@@ -641,6 +656,12 @@
             </div>
           </div>
         </div>
+        <ul class="underline-dots">
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+        </ul>
       </div>
     </section>
 
